Enable UsePaintRecordForImageSkia for Chrome OS

GPU rasterization for Chrome OS is being enabled but it causes a
regression in the rendering of vector icons at fractional scales most
likely due to its interaction with Pixel Canvas. It seems like the
vector icons are being rescaled after rasterization to get the correct
scale images. This results in the broken and blurry icon bitmaps. Using
PaintRecords instead of rasterized bitmaps fixes this bug, as scaling
on PaintRecords is sharp.

Bug: 894901
Change-Id: I1cd541927b7aaa032780b15d66df2a69f45c18e4
Component: Images, vector icons, Chrome OS
Reviewed-on: https://chromium-review.googlesource.com/c/1279068
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599423}
Former-commit-id: 13657ca1e89d716d4566085fee50e8fe83ab5cc7